--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
               <button class="dropdown-item" type="button">Something else here</button>
             </div>
           </div>
-          <span class="navbar-phone"><span class="fa fa-phone fonticons"></span><a href="tel:800-36227">CALL 800-36227</a><span>
-              <span class="fa fa-whatsapp fonticons"></span><a href="https://api.whatsapp.com/send?phone=8377081571&text=Contact%20via%20whatsapp">WHATSAPP</a>
+          <span class="navbar-phone"><span class="fa fa-phone fonticons"></span><a href="tel:800-36227" class="contactdetails">CALL 800-36227</a><span>
+              <span class="fa fa-whatsapp fonticons"></span><a href="https://api.whatsapp.com/send?phone=8377081571&text=Contact%20via%20whatsapp" class="contactdetails">WHATSAPP</a>
         <div class="btn getintouch text-uppercase">Get in touch</div>
         </div>
       </nav>
@@ -149,6 +149,131 @@
         </div>
     </div>
 </section>
+<section class="key-facts">
+    <div class="container key-facts-bg">
+        <div class="row key-facts-heading">
+            <div class="col-md-6 col-lg-6 col-xl-6 col-sm-10 key-facts-para">
+                <h5>Key Facts About Dubai Creek Harbour</h5>
+                <ul>
+                    <li>Lorem ipsum, dolor sit,Lorem ipsum, dolor sit</li>
+                    <li>Lorem ipsum, dolor sit,Lorem ipsum, dolor sit</li>
+                    <li>Lorem ipsum, dolor sit,Lorem ipsum, dolor sit</li>
+                    <li>Lorem ipsum, dolor sit,Lorem ipsum, dolor sit</li>
+                    <li>Lorem ipsum, dolor sit,Lorem ipsum, dolor sit</li>
+                    <li>Lorem ipsum, dolor sit,Lorem ipsum, dolor sit</li>
+                    <li>Lorem ipsum, dolor sit,Lorem ipsum, dolor sit</li>
+                    <li>Lorem ipsum, dolor sit,Lorem ipsum, dolor sit</li>
+                </ul>
+            </div>
+            <div class="col-md-6 col-lg-6 col-xl-6 col-sm-10">
+                <img src="images/EMAAR_BLOG_HEADER_RESIZED-440x385.jpg">
+            </div>
+        </div>
+</section>
+<section class="map">
+    <div class="container">
+        <div class="row map-btn">
+            <div class="col-md-12 col-xl-12 col-lg-12 col-sm-12 text-center">
+                <button class="btn btn-default text-uppercase font-weight-bold pricingbtn">location</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-xl-6 col-lg-6 col-sm-10 map-img">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56075.25816395741!2d77.2487308629866!3d28.548626421766606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3ed1d4f8439%3A0x684f23068205aab4!2sSukhdev%20Vihar%2C%20Okhla%2C%20New%20Delhi%2C%20Delhi%20110025!5e0!3m2!1sen!2sin!4v1626878557920!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="col-md-6 col-xl-6 col-lg-6 col-sm-10">
+                <img src="images/EMAAR_BLOG_HEADER_RESIZED-440x385.jpg">
+            </div>
+        </div>
+    </div>
+</section>
+<section class="form">
+    <div class="container">
+        <div class="row form-heading text-center font-weight-bold">
+            <div class="col-md-12 col-xl-12 col-md-lg-12 col-sm-10">
+                <h2>register now to save the best unit</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <form>
+                    <div class="form-group row">
+                      <label for="inputName3" class="col-sm-2 col-form-label"></label>
+                      <div class="col-sm-10">
+                        <input type="text" class="form-control" id="inputName3" placeholder="Your Name">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <label for="inputEmail3" class="col-sm-2 col-form-label"></label>
+                      <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputEmail3" placeholder="Email">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="country"></label>
+                        <div class="col-sm-10 ml-auto">
+                        <select class="custom-select" id="country" required>
+                          <option selected disabled value="">+91</option>
+                          <option></option>
+                        </select>
+                    </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="exampleFormControlTextarea1"></label>
+                        <div class="col-sm-10 ml-auto">
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Your Enquiry"></textarea>
+                      </div>
+                    </div>
+                    <div class="form-group row text-center submitbtn1">
+                      <div class="col-sm-10">
+                        <button type="submit" class="btn submit-btn">Register Now</button>
+                      </div>
+                    </div>
+                  </form>
+            </div>
+            <div class="col-md-6 invest text-left text-capitalize">
+                      <h4>Invest in dubai creek Harbour</h4>
+                      <ul>
+                          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure </li>
+                          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure </li>
+                          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure </li>
+                          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure </li>
+                          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure </li>
+                          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure </li>
+                      </ul>
+                      <img src="images/EMAAR_BLOG_HEADER_RESIZED-440x385.jpg">
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center footer-heading">
+                <h3>For more information please call:</h3>
+            </div>
+            </div>
+            <div class="row">
+            <div class="col-md-12 text-center font-weight-bold footer-num">
+                <h4>+971(4)551-6626</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center whatsapp-btn2">
+                <button class="btn btn-success"><h6>click here to contact us directly</h6><span class="fa fa-whatsapp whatsappicon"></span>Whatsapp</button>
+            </div>
+        </div>
+    <div class="row">
+        <div class="col-md-12 footer-bg text-center">
+            <span class="footer-logo"><img src="images/emaar-logo.svg" width="80px"></span>
+            <span class="footer-para">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore necessitatibus quidem iure illum aspernatur laboriosam minus, sequi, optio beatae ad unde alias animi quas veritatis distinctio. Optio totam quia hic!
+            </span>
+        </div>
+    </div>
+</footer>
+
+        
 
 </head>
 <body>
